--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,7 +47,7 @@ coroutine-ktx = { module = 'org.jetbrains.kotlinx:kotlinx-coroutines-android', v
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "dagger-hilt" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "dagger-hilt" }
 #hilt-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "dagger-hilt" }
-dagger-hilt-lifecycle = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "dagger-hilt-lifecycle" }
+#dagger-hilt-lifecycle = { module = "androidx.hilt:hilt-lifecycle-viewmodel", version.ref = "dagger-hilt-lifecycle" }
 dagger-hilt-navigation = { module = 'androidx.hilt:hilt-navigation-compose', version.ref = "dagger-hilt-navigation" }
 
 
